fixing header alignment

--- a/assets/styles/components.css
+++ b/assets/styles/components.css
@@ -1,4 +1,1 @@
-.company-component .company-company__follow {
-    position: relative;
-    top: -5px;
-}
+/* empty */
